Fix: Overflow

--- a/static/styles/home.css
+++ b/static/styles/home.css
@@ -42,7 +42,7 @@ body {
     align-items: center;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     font-size: 1.1rem;
-    overflow: scroll;
+    /* overflow: scroll; */
 }
 
 .navbar-item {
